--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -44,14 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HealingPotion.cs" />
-    <Compile Include="InventoryItem.cs" />
+    <Compile Include="Player\InventoryItem.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="LivingCreature.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="LootItem.cs" />
     <Compile Include="Monster.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerQuest.cs" />
+    <Compile Include="Player\Player.cs" />
+    <Compile Include="Player\PlayerQuest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quest.cs" />
     <Compile Include="QuestCompletionItem.cs" />
